added missing JS_toggle in popups

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -14,7 +14,7 @@
 
   <div class="itemBox JS_multiSelector__box">
     <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitle">
-      <li class="itemBox__cell itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
         </div>
@@ -33,7 +33,7 @@
 
     <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
       <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleInclude">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ Include</div>
           </div>
@@ -106,7 +106,7 @@
       </div>
 
       <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleExclude">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ऄ Exclude</div>
           </div>
@@ -187,7 +187,7 @@
     <!-- /.itemBox -->
 
     <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--optionsTitle">
-      <li class="itemBox__cell itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">अ All</div>
         </div>
