--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -15,7 +15,7 @@
 
   <div class="itemBox JS_multiSelector__box">
     <ul class="itemBox__row JS_multiSelector__box--selectionTitle">
-      <li class="itemBox__cell itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
         </div>
@@ -62,7 +62,7 @@
     </div><!-- /.itemBox -->
 
     <ul class="itemBox__row JS_multiSelector__box--optionsTitle">
-      <li class="itemBox__cell itemBox__cell--toggle">
+      <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ All</div>
         </div>
