--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -12,7 +12,7 @@
 
   <div class="itemBox JS_multiSelector__box">
     <ul class="itemBox__row JS_multiSelector__box--selectionTitle">
-      <li class="itemBox__cell itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
         </div>
@@ -31,7 +31,7 @@
     <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
       <div class="itemBoxBody--sortable ui-sortable">
         <ul class="itemBox__row JS_multiSelector__box--selectionTitleInclude">
-          <li class="itemBox__cell itemBox__cell--action">
+          <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
               <div class="itemBox__action">ऄ Include</div>
             </div>
@@ -80,7 +80,7 @@
     </div>
     <!-- /.itemBox -->
     <ul class="itemBox__row JS_multiSelector__box--optionsTitle">
-      <li class="itemBox__cell itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ All</div>
         </div>
