--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -12,7 +12,7 @@
 
   <div class="itemBox JS_multiSelector__box">
     <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitle">
-      <li class="itemBox__cell itemBox__cell--action">
+      <li class="itemBox__cell itemBox__cell--action JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ Selected</div>
         </div>
@@ -32,7 +32,7 @@
     <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
       <div class="itemBoxBody--sortable ui-sortable">
         <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleInclude">
-          <li class="itemBox__cell itemBox__cell--action">
+          <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
               <div class="itemBox__action">ऄ Include</div>
             </div>
@@ -96,7 +96,7 @@
         </div>
 
         <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--selectionTitleExclude">
-          <li class="itemBox__cell itemBox__cell--action">
+          <li class="itemBox__cell itemBox__cell--action JS_toggle">
             <div class="itemBox__cellInner">
               <div class="itemBox__action">ऄ Exclude</div>
             </div>
