tabs/actions/breadcrumbs

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -4,7 +4,7 @@
     <ul class="itemBox__row">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          <input type="search" class="itemBox__input itemBox__input--fluid JS_appNav__filterInput" placeholder="filter through items">
+          <input type="search" class="itemBox__input itemBox__input--fluid JS_appNav__filterInput" placeholder="filter through structure items">
         </div>
       </li>
     </ul>
