--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -1,6 +1,6 @@
 <div class="app-navigator__nav">
 
-  <div class="tabs tabs--light">
+  <div class="tabs tabs--invert">
     <div class="tabs-nav">
       <div class="tabs-nav__slide tabs-nav__slide--left tabs-nav__slide--hidden">
         <span class="tabs-nav__slideShadow"></span>
