--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -10,22 +10,22 @@
     </li>
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <i class="itemBox__action itemBox__action--disabled" title="refresh">ހ</i>
+        <div class="itemBox__action itemBox__action--disabled" title="refresh">ހ</div>
       </div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <i class="itemBox__action" title="add">ނ</i>
+        <div class="itemBox__action" title="add">ނ</div>
       </div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <i class="itemBox__action" title="link">ރ</i>
+        <div class="itemBox__action" title="link">ރ</div>
       </div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
       <div class="itemBox__cellInner">
-        <i class="itemBox__action" title="arrange columns">ށ</i>
+        <div class="itemBox__action" title="arrange columns">ށ</div>
       </div>
     </li>
   </ul>
@@ -33,7 +33,7 @@
   <ul class="itemBox__row itemBox__row--h2">
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <i class="itemBox__action JS_expand">ऄ</i>
+        <div class="itemBox__action JS_expand">ऄ</div>
       </div>
     </li>
     <li class="itemBox__cell">
@@ -82,7 +82,7 @@
   <ul class="itemBox__row itemBox__row--item">
     <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
-        <i class="itemBox__action">ऄ</i>
+        <div class="itemBox__action">ऄ</div>
       </div>
     </li>
     <li class="itemBox__cell">
@@ -115,22 +115,22 @@
       </li>
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <i class="itemBox__action itemBox__action--disabled">ހ</i>
+          <div class="itemBox__action itemBox__action--disabled">ހ</div>
         </div>
       </li>
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <i class="itemBox__action">ނ</i>
+          <div class="itemBox__action">ނ</div>
         </div>
       </li>
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <i class="itemBox__action">ރ</i>
+          <div class="itemBox__action">ރ</div>
         </div>
       </li>
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
         <div class="itemBox__cellInner">
-          <i class="itemBox__action">ށ</i>
+          <div class="itemBox__action">ށ</div>
         </div>
       </li>
     </ul>
@@ -138,7 +138,7 @@
     <ul class="itemBox__row itemBox__row--h2">
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <i class="itemBox__action">ऄ</i>
+          <div class="itemBox__action">ऄ</div>
         </div>
       </li>
       <li class="itemBox__cell">
@@ -202,7 +202,7 @@
     <ul class="itemBox__row itemBox__row--item">
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
-          <i class="itemBox__action">ऄ</i>
+          <div class="itemBox__action">ऄ</div>
         </div>
       </li>
       <li class="itemBox__cell">
@@ -267,22 +267,22 @@
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <i class="itemBox__action itemBox__action--disabled">ހ</i>
+            <div class="itemBox__action itemBox__action--disabled">ހ</div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <i class="itemBox__action">ނ</i>
+            <div class="itemBox__action">ނ</div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <i class="itemBox__action">ރ</i>
+            <div class="itemBox__action">ރ</div>
           </div>
         </li>
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker">
           <div class="itemBox__cellInner">
-            <i class="itemBox__action">ށ</i>
+            <div class="itemBox__action">ށ</div>
           </div>
         </li>
       </ul>
@@ -290,7 +290,7 @@
       <ul class="itemBox__row itemBox__row--h2">
         <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <i class="itemBox__action">ऄ</i>
+            <div class="itemBox__action">ऄ</div>
           </div>
         </li>
         <li class="itemBox__cell">
