--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -4,7 +4,7 @@
     <ul class="itemBox__row">
       <li class="itemBox__cell">
           <div class= "itemBox__cellInner JS_text">
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_appNav__filterInput" placeholder="filter through smarlists">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_appNav__filterInput" placeholder="filter through smarlist items">
           </div>
       </li>
     </ul>
