--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -5,6 +5,7 @@
       <span class="item-header__id">391441</span>
     </div>
     <h2 class="font--h2 ellipsis" title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
+    <input type="text" class="item-header__title-input" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">
   </div>
 
   <div class="item-header__actions">
