--- a/sass/blocks/item-header.scss
+++ b/sass/blocks/item-header.scss
@@ -18,7 +18,7 @@
       max-width: 75%;
 
       h2 {
-        margin: 5px 0;
+        padding: 5px 0;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
