--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -709,6 +709,8 @@
 
   &__cellInner {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     padding: 5px 15px;
