Popup overlay: fixed JS for it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 
   <body class="page-{{ page.title }}">
     <div class="app">
+      <div class="app__overlay"></div>
       {{ content }}
     </div>
 
