Color sublist: fixed expand-collapse

--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -27,7 +27,7 @@
       </li>
     </ul>
 
-    <div class="itemBox JS_multiSelector__box--selectionChildren">
+    <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
       <div class="JS_sortable ui-sortable">
         {% for item in site.data.tag-picker-color.selected %}
           <ul class="itemBox__row itemBox__row--item JS_filterableCell">
