--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -1,4 +1,4 @@
-<div class="itemBox itemBox--children-sublist JS_itemBox--colors"  style="display: none;">
+<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--colors"  style="display: none;">
   {% for item in site.data.color-sublist.items %}
     <ul class="itemBox__row">
       <li class="itemBox__cell">
