Revert "Missing parent test"
This reverts commit a796a2133d2dbb3362516576c4d47823737188d0.

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -304,7 +304,8 @@
         </li>
       </ul>
 
-      {% include blocks/itembox-row.html %} {% include blocks/itembox-row.html %}
+      {% include blocks/itembox-row.html %}
+      {% include blocks/itembox-row.html %}
 
       <ul class="itemBox__row itemBox__row--h3">
         <li class="itemBox__cell">
@@ -312,32 +313,38 @@
         </li>
       </ul>
 
-      {% include blocks/itembox-row.html %} {% include blocks/itembox-row.html %}
+      {% include blocks/itembox-row.html %}
+      {% include blocks/itembox-row.html %}
 
       <ul class="itemBox__row itemBox__row--foot">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner font--xs">All <span>4</span> items loaded</div>
         </li>
       </ul>
-    </div>
-    <!-- /.itemBox -->
+    </div><!-- /.itemBox -->
 
-    {% include blocks/itembox-row.html %} {% include blocks/itembox-row.html %} {% include blocks/popup/ms-load-more.html %}
+    {% include blocks/itembox-row.html %}
+    {% include blocks/itembox-row.html %}
+
+    {% include blocks/popup/ms-load-more.html %}
 
     <ul class="itemBox__row itemBox__row--foot">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
       </li>
     </ul>
-  </div>
-  <!-- /.itemBox -->
+  </div><!-- /.itemBox -->
 
-  {% include blocks/itembox-row.html %} {% include blocks/itembox-row.html %} {% include blocks/itembox-row.html %} {% include blocks/itembox-row.html %} {% include blocks/popup/ms-load-more.html %}
+  {% include blocks/itembox-row.html %}
+  {% include blocks/itembox-row.html %}
+  {% include blocks/itembox-row.html %}
+  {% include blocks/itembox-row.html %}
+
+  {% include blocks/popup/ms-load-more.html %}
 
   <ul class="itemBox__row itemBox__row--foot">
     <li class="itemBox__cell">
       <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
     </li>
   </ul>
-</div>
-<!-- /.itemBox -->
+</div><!-- /.itemBox -->
