Filter date popup: added some more missing JS toggles

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -177,7 +177,7 @@
 
     <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
       <ul class="itemBox__row">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Smart Dates</div>
           </div>
@@ -216,7 +216,7 @@
       <!-- smart dates -->
 
       <ul class="itemBox__row">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Simple Dates</div>
           </div>
@@ -256,7 +256,7 @@
       <!-- simple dates -->
 
       <ul class="itemBox__row">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Ranges</div>
           </div>
@@ -295,7 +295,7 @@
       <!-- ranges -->
 
       <ul class="itemBox__row">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">अ Next/Last</div>
           </div>
