try permalink in user menu

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -42,6 +42,10 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">Performed For</div>
     </li>
+    <li class="itemBox__cell itemBox__cell--flex0">
+      <div class="itemBox__cellInner">
+      </div>
+    </li>
     <li class="itemBox__cell itemBox__cell--flex3">
       <div class="itemBox__cellInner">Assigned to</div>
     </li>
@@ -90,6 +94,10 @@
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
+    </li>
+    <li class="itemBox__cell itemBox__cell--flex0">
+      <div class="itemBox__cellInner">
+      </div>
     </li>
     <li class="itemBox__cell itemBox__cell--flex3">
       <div class="itemBox__cellInner">
