--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -1,6 +1,6 @@
 <div class="itemBox itemBox--children-sublist JS_itemBox--colors"  style="display: none;">
   {% for item in site.data.color-sublist.items %}
-    <ul class="itemBox__row">
+    <ul class="itemBox__row itemBox__row--item">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner JS_itemBox__cellInner--color">
 
