--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -23,15 +23,13 @@
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">ण</div>
           </div>
         </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">My To Do's</div>
-          </div>
+        <li class="itemBox__cell itemBox__cell--permalink">
+          <div class="itemBox__cellInner">My To Do's</div>
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
