--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -61,7 +61,7 @@
       </div>
     </div><!-- /.itemBox -->
 
-    <ul class="itemBox__row JS_multiSelector__box--optionsTitle">
+    <ul class="itemBox__row itemBox__row--item JS_multiSelector__box--optionsTitle">
       <li class="itemBox__cell itemBox__cell--toggle JS_toggle">
         <div class="itemBox__cellInner">
           <div class="itemBox__action">ऄ All</div>
@@ -81,7 +81,7 @@
 
     <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
       {% for item in site.data.tag-picker-color.options %}
-        <ul class="itemBox__row JS_filterableCell">
+        <ul class="itemBox__row itemBox__row--item JS_filterableCell">
           <li class="itemBox__cell ">
             <div class="itemBox__cellInner JS_toggle--color">
 
