--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -15,9 +15,9 @@
 
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBox__cell--draggable ui-sortable-handle">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action ui-sortable-handle">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBoxTable__action--drag">އ</div>
+          <div class="itemBox__action itemBox__action--hidden">އ</div>
         </div>
       </li>
       <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
