--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -30,7 +30,7 @@
       &:last-child {
         position: absolute;
         top: 0;
-        left: 0;
+        left: -1px;
         z-index: 1;
         opacity: 1;
         padding: 5px 20px 5px 10px;
