user menu links

--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -11,48 +11,28 @@
 
     <div class="itemBox">
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--actionn">
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ढ</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">Home</div>
+            <div class="itemBox__action">ढ Home</div>
           </div>
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBox__cell--permalink">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">ण</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--permalink">
-          <div class="itemBox__cellInner">My To Do's</div>
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
+          <div class="itemBox__cellInner">ण My To Do's</div>
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">झ</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">Time sheets</div>
+            <div class="itemBox__action">झ Time sheets</div>
           </div>
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ऌ</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">Reports</div>
+            <div class="itemBox__action">ऌ Reports</div>
           </div>
         </li>
       </ul>
@@ -60,38 +40,23 @@
 
     <div class="itemBox">
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ट</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">Help</div>
+            <div class="itemBox__action">ट Help</div>
           </div>
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">ड</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">Settings</div>
+            <div class="itemBox__action">ड Settings</div>
           </div>
         </li>
       </ul>
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--action itemBox__cell--permalink">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action">त</div>
-          </div>
-        </li>
-        <li class="itemBox__cell itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action">Logout</div>
+            <div class="itemBox__action">त Logout</div>
           </div>
         </li>
       </ul>
